exports[`MoveReducer creates MOVE_NODE_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/move/node/start"
  },
  Object {
    "result": Object {
      "failed": Array [],
      "moved": Array [
        2,
        3
      ]
    },
    "type": "musit/move/node/success"
  }
]
`;

exports[`MoveReducer creates MOVE_OBJECT_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/move/object/start"
  },
  Object {
    "result": Object {
      "failed": Array [],
      "moved": Array [
        2,
        3
      ]
    },
    "type": "musit/move/object/success"
  }
]
`;

exports[`MoveReducer node: fail action 1`] = `
Object {
  "error": [Error: Some error in moveNode.],
  "loaded": false,
  "loading": false
}
`;

exports[`MoveReducer node: initial action 1`] = `
Object {
  "loaded": false,
  "loading": true
}
`;

exports[`MoveReducer node: no action 1`] = `Object {}`;

exports[`MoveReducer node: success action 1`] = `
Object {
  "loaded": true,
  "loading": false
}
`;

exports[`MoveReducer object: fail action 1`] = `
Object {
  "error": [Error: Some error in moveObject.],
  "loaded": false,
  "loading": false
}
`;

exports[`MoveReducer object: initial action 1`] = `
Object {
  "loaded": false,
  "loading": true
}
`;

exports[`MoveReducer object: no action 1`] = `Object {}`;

exports[`MoveReducer object: success action 1`] = `
Object {
  "loaded": true,
  "loading": false
}
`;
